# school-of-haskell

./: .gitignore  LICENSE  README.md
cis194/homework-1/: README.md
cis194/homework-1/src/HW1/: CreditCard.hs  TowersOfHanoi.hs
cis194/homework-1/test/HW1/: CreditCardSpec.hs  TowersOfHanoiSpec.hs
cis194/homework-2/: README.md  homework2.cabal
cis194/homework-2/src/HW2/: LogAnalysis.hs
cis194/homework-2/src/Provided/: Log.hs
cis194/homework-2/test/HW2/: LogAnalysisSpec.hs
cis194/homework-3/: README.md  homework3.cabal
cis194/homework-3/src/HW3/: Golf.hs
cis194/homework-3/test/HW3/: GolfSpec.hs
cis194/homework-4/: README.md  homework4.cabal
cis194/homework-4/src/HW4/: HigherOrder.hs
cis194/homework-4/test/HW4/: HigherOrderSpec.hs
cis194/homework-5/: README.md  homework5.cabal
cis194/homework-5/src/HW5/: Calc.hs  CalcTest.hs
cis194/homework-5/src/Provided/: ExprT.hs  Parser.hs  StackVM.hs
cis194/homework-5/test/HW5/: CalcSpec.hs
cis194/homework-6/: README.md  homework6.cabal
cis194/homework-6/src/HW6/: Fibonacci.hs  Optional.hs
cis194/homework-6/test/HW6/: FibonacciSpec.hs  OptionalSpec.hs
cis194/homework_1/: homework1.cabal
cis194/homework_1/src/HW1/: TowersOfHanoi.hs
cis194/homework_1/test/HW1/: TowersOfHanoiSpec.hs
