name:                  homework4
version:               0.1.0.0
synopsis:              homework 4 specs
homepage:              https://github.com/Haskallywags/school-of-haskell
license:               MIT
author:                Jon Childress
maintainer:            jon@childr.es
build-type:            Simple
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HW4.HigherOrder
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8

test-suite             spec
  hs-source-dirs:      src, test
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8,
                       hspec == 2.1.*,
                       QuickCheck == 2.7.*
