name:                  homework6
version:               0.1.0.0
synopsis:              homework 6 specs
homepage:              https://github.com/Haskallywags/school-of-haskell
license:               MIT
author:                Jon Childress
maintainer:            jon@childr.es
build-type:            Simple
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HW6.Fibonacci, HW6.Optional
  default-language:    Haskell2010
  build-depends:       base == 4.*

test-suite             spec
  hs-source-dirs:      src, test
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base == 4.*,
                       hspec == 2.*,
                       QuickCheck == 2.*
